--- a/styles/scss/banner-pl.scss
+++ b/styles/scss/banner-pl.scss
@@ -288,7 +288,7 @@ span {
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 727px) {
     .announcementBanner {
         justify-content: center;
 
@@ -308,10 +308,6 @@ span {
         display: block;
     }
 
-    .bannerBox.hidden {
-        top: 0;
-    }
-
     .bannerInnerBox {
         width: 100vw;
         display: flex;
@@ -320,55 +316,10 @@ span {
     .announcementBanner {
         height: 100%;
         width: 100vw;
+        justify-content: center;
 
-        &.leftRight {
-            // LEFT
-            .bannerLeft,
-            .mobile-banner-spacer {
-                height: 40%;
-            }
-
-            .bannerLeft {
-                width: 100%;
-                position: absolute;
-                z-index: 1;
-                top: 50%;
-                transform: translate(-50%, -60%);
-                left: 50%;
-            }
-
-            .bannerImage {
-                position: relative;
-                display: block;
-                padding-right: 0;
-            }
-
-            // RIGHT
-            .bannerRight {
-                border: none;
-                height: 100%;
-
-                .titlesAndButtons {
-                    padding: 0 24px;
-                }
-            }
-
-            .mainTitle {
-                flex: 1 1 26%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-            }
-
-            .mobile-banner-spacer {
-                flex: 1 1 40%;
-                width: 100%;
-                // background: green;
-            }
-
-            .surOrSubTitle {
-                flex: 1 1 34%;
-            }
+        .titlesAndButtons {
+            padding: 0 5%;
         }
 
         .mainTitle {
@@ -398,6 +349,12 @@ span {
             min-width: 110px;
             padding: 9px 12px;
             margin-top: 8px;
+        }
+
+        .bannerImage {
+            background-size: 100%;
+            background-position: 50% 100%;
+            height: 52%;
         }
 
         .noImage {
@@ -437,14 +394,6 @@ span {
         &.atvWelcome {
             .bannerRight .titlesAndButtons {
                 padding: 10px 10px 150px 10px;
-            }
-        }
-    }
-
-    .logged-in {
-        .announcementBanner.leftRight {
-            .bannerLeft {
-                width: 100%;
             }
         }
     }
