--- a/styles/css/banner.css
+++ b/styles/css/banner.css
@@ -1,29 +1,29 @@
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 300;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-light.ttf") format("truetype"); }
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 400;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-regular.ttf") format("truetype"); }
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 600;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-semibold.ttf") format("truetype"); }
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 700;
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-bold.ttf") format("truetype"); }
 @font-face {
-  font-family: "Muli";
+  font-family: 'Muli';
   font-weight: 800;
   font-style: normal;
   font-display: fallback;
@@ -34,14 +34,14 @@ body {
   margin: 0;
   padding: 0;
   background: lightcoral;
-  font-family: "Muli", Verdana, sans-serif; }
+  font-family: 'Muli', Verdana, sans-serif; }
 
 button {
   border: none;
   -webkit-appearance: none;
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0);
-  font-family: "Muli"; }
+  font-family: 'Muli'; }
 
 .bannerInnerBox {
   box-sizing: border-box;
@@ -328,10 +328,10 @@ span.smallSpace {
     position: relative;
     width: calc(50% + 255px);
     border-width: 0 0 1px 0;
-    border-color: rgba(255, 255, 255, 0.4);
+    border-color: #206778;
     border-style: solid; }
     .announcementBanner .bannerRight:before {
-      content: "";
+      content: '';
       position: absolute;
       border-width: 18px;
       border-style: solid;
@@ -378,9 +378,9 @@ span.smallSpace {
   background-position-x: 100%;
   background-position-y: 50%; }
 .announcementBanner.leftRight .bannerRight {
-  background: #a0156f; }
+  background: #206778; }
   .announcementBanner.leftRight .bannerRight:before {
-    border-right-color: #a0156f; }
+    border-right-color: #206778; }
 .announcementBanner.leftRight .titlesAndButtons {
   height: 100%;
   text-align: left;
@@ -390,7 +390,7 @@ span.smallSpace {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 850px;
+  max-width: 780px;
   font-size: 62.5%; }
 .announcementBanner.leftRight .mainTitle {
   padding: 0;
@@ -464,7 +464,7 @@ span.smallSpace {
   .playPause {
     right: unset;
     left: 0; } }
-@media screen and (max-width: 767px) and (orientation: portrait) {
+@media screen and (max-width: 767px) {
   .shyBreak {
     display: block; }
 
@@ -476,6 +476,9 @@ span.smallSpace {
     height: 100%;
     width: 100vw; }
     .announcementBanner .mobile-banner-spacer {
+      width: 100%; }
+    .announcementBanner .mobile-banner-bottom-spacer {
+      height: 13%;
       width: 100%; }
     .announcementBanner.leftRight .bannerLeft,
     .announcementBanner.leftRight .mobile-banner-spacer {
@@ -490,21 +493,24 @@ span.smallSpace {
     .announcementBanner.leftRight .bannerImage {
       position: relative;
       display: block;
-      padding-right: 0; }
+      padding-right: 0;
+      background-position-x: 50%; }
     .announcementBanner.leftRight .bannerRight {
       border: none;
       height: 100%; }
       .announcementBanner.leftRight .bannerRight .titlesAndButtons {
         padding: 0 24px; }
     .announcementBanner.leftRight .titles {
-      display: block; }
+      display: flex; }
     .announcementBanner.leftRight .mainTitle {
       height: calc(45% - 60px);
       display: flex;
       flex-direction: column;
-      justify-content: center; }
+      justify-content: center;
+      max-width: 460px; }
     .announcementBanner.leftRight .surOrSubTitle {
-      flex: 1 1 34%; }
+      flex: 1 1 34%;
+      max-width: 400px; }
     .announcementBanner .mainTitle {
       font-size: 95%; }
     .announcementBanner .surOrSubTitle {
