--- a/styles/css/banner.css
+++ b/styles/css/banner.css
@@ -140,18 +140,16 @@ span.smallSpace {
   align-items: center;
   justify-content: center;
   text-align: left;
-  color: rgba(255, 255, 255, 0.9);
-  font-weight: 300;
+  color: #3c4958;
+  font-weight: 700;
   padding: 0;
   height: 131px;
   position: relative;
-  overflow: visible;
   overflow: hidden; }
   .announcementBanner a {
-    font-weight: 600;
+    font-weight: 800;
     text-decoration: none;
-    color: white;
-    border-bottom: 1px solid #ffffff91; }
+    color: #2d3948; }
   .announcementBanner.noImage .bannerImage {
     display: block; }
     .announcementBanner.noImage .bannerImage img {
@@ -333,13 +331,13 @@ span.smallSpace {
     .announcementBanner .bannerRight:before {
       content: '';
       position: absolute;
-      border-width: 18px;
+      border-width: 20px;
       border-style: solid;
       border-color: rgba(0, 0, 0, 0);
       left: 0;
       z-index: 1;
       margin-left: -36px;
-      margin-top: -58px; }
+      margin-top: -48px; }
   .announcementBanner .titlesAndButtons {
     display: flex;
     flex-direction: column;
@@ -365,26 +363,32 @@ span.smallSpace {
 
 .announcementBanner.leftRight .bannerLeft {
   width: calc(50% - 191px);
-  background: #e3e0e8; }
+  background: #2d3949; }
 .announcementBanner.leftRight .bannerImage {
   position: absolute;
   width: 100%;
-  right: 0;
+  right: 10px;
   top: 0px;
   height: 100%;
-  background-image: url(../../images/rt_quiz_banner_image3b.png);
-  background-size: 613px;
+  background-image: url(../../images/instagram_banner_image2.png);
+  background-size: 545px;
   background-repeat: no-repeat;
   background-position-x: 100%;
   background-position-y: 50%; }
+.announcementBanner.leftRight .bannerGradient {
+  position: absolute;
+  right: 171px;
+  top: 0;
+  background: #e2e6ee;
+  background: linear-gradient(90deg, #e2e6ee 0%, #2d3949 35%, #2d3949 100%); }
 .announcementBanner.leftRight .bannerRight {
-  background: #942d2d; }
+  background: #e2e6ee; }
   .announcementBanner.leftRight .bannerRight:before {
-    border-right-color: #942d2d; }
+    border-right-color: #e2e6ee; }
 .announcementBanner.leftRight .titlesAndButtons {
   height: 100%;
   text-align: left;
-  padding: 28px 28px 44px; }
+  padding: 26px 28px 26px; }
 .announcementBanner.leftRight .titles {
   height: 100%;
   display: flex;
@@ -394,19 +398,21 @@ span.smallSpace {
   font-size: 62.5%; }
 .announcementBanner.leftRight .mainTitle {
   padding: 0;
-  font-size: 2.5em;
+  font-size: 2.7em;
   line-height: 1.1em;
-  letter-spacing: -0.01em; }
+  letter-spacing: -0.015em; }
   .announcementBanner.leftRight .mainTitle span.standOut {
     font-size: 99%;
     font-weight: 700; }
 .announcementBanner.leftRight .surOrSubTitle {
   position: relative;
-  font-size: 1.75em;
-  line-height: 1.3em;
+  font-size: 1.7em;
+  line-height: 1.1em;
   font-weight: 400;
-  letter-spacing: 0.03em;
-  max-width: 640px; }
+  letter-spacing: 0.01em;
+  max-width: 580px;
+  font-family: 'FS Me';
+  color: #465464; }
   .announcementBanner.leftRight .surOrSubTitle.small .button-text {
     display: inline-block;
     border-radius: 16px;
@@ -499,7 +505,8 @@ span.smallSpace {
       flex-direction: column;
       justify-content: center; }
     .announcementBanner.leftRight .surOrSubTitle {
-      flex: 1 1 34%; }
+      flex: 1 1 34%;
+      max-width: 435px; }
     .announcementBanner .mainTitle {
       font-size: 95%; }
     .announcementBanner .surOrSubTitle {
