--- a/styles/scss/banner.scss
+++ b/styles/scss/banner.scss
@@ -188,19 +188,17 @@ span {
     align-items: center;
     justify-content: center;
     text-align: left;
-    color: rgba(255, 255, 255, 0.9);
-    font-weight: 300;
+    color: #3c4958;
+    font-weight: 700;
     padding: 0;
     height: 131px;
     position: relative;
-    overflow: visible;
     overflow: hidden;
 
     a {
-        font-weight: 600;
+        font-weight: 800;
         text-decoration: none;
-        color: white;
-        border-bottom: 1px solid #ffffff91;
+        color: #2d3948;
     }
 
     &.noImage {
@@ -508,13 +506,13 @@ span {
         &:before {
             content: '';
             position: absolute;
-            border-width: 18px;
+            border-width: 20px;
             border-style: solid;
             border-color: rgba(0, 0, 0, 0);
             left: 0;
             z-index: 1;
             margin-left: -36px;
-            margin-top: -58px;
+            margin-top: -48px;
         }
     }
 
@@ -556,34 +554,46 @@ span {
 .announcementBanner.leftRight {
     .bannerLeft {
         width: calc(50% - 191px);
-        background: #e3e0e8;
+        background: #2d3949;
     }
 
     .bannerImage {
         position: absolute;
         width: 100%;
-        right: 0;
+        right: 10px;
         top: 0px;
         height: 100%;
-        background-image: url(../../images/rt_quiz_banner_image3b.png);
-        background-size: 613px;
+        background-image: url(../../images/instagram_banner_image2.png);
+        background-size: 545px;
         background-repeat: no-repeat;
         background-position-x: 100%;
         background-position-y: 50%;
     }
+    .bannerGradient {
+        position: absolute;
+        right: 171px;
+        top: 0;
+        background: rgb(226, 230, 238);
+        background: linear-gradient(
+            90deg,
+            rgba(226, 230, 238, 1) 0%,
+            rgba(45, 57, 73, 1) 35%,
+            rgba(45, 57, 73, 1) 100%
+        );
+    }
 
     .bannerRight {
-        background: #942d2d;
+        background: #e2e6ee;
 
         &:before {
-            border-right-color: #942d2d;
+            border-right-color: #e2e6ee;
         }
     }
 
     .titlesAndButtons {
         height: 100%;
         text-align: left;
-        padding: 28px 28px 44px;
+        padding: 26px 28px 26px;
     }
 
     .titles {
@@ -597,9 +607,9 @@ span {
 
     .mainTitle {
         padding: 0;
-        font-size: 2.5em;
+        font-size: 2.7em;
         line-height: 1.1em;
-        letter-spacing: -0.01em;
+        letter-spacing: -0.015em;
 
         span.standOut {
             font-size: 99%;
@@ -609,11 +619,13 @@ span {
 
     .surOrSubTitle {
         position: relative;
-        font-size: 1.75em;
-        line-height: 1.3em;
+        font-size: 1.7em;
+        line-height: 1.1em;
         font-weight: 400;
-        letter-spacing: 0.03em;
-        max-width: 640px;
+        letter-spacing: 0.01em;
+        max-width: 580px;
+        font-family: 'FS Me';
+        color: #465464;
 
         &.small .button-text {
             display: inline-block;
@@ -796,6 +808,7 @@ span {
 
             .surOrSubTitle {
                 flex: 1 1 34%;
+                max-width: 435px;
             }
         }
 
