--- a/styles/css/banner.css
+++ b/styles/css/banner.css
@@ -28,6 +28,18 @@
   font-style: normal;
   font-display: fallback;
   src: url("../../fonts/muli/muli-black.ttf") format("truetype"); }
+@font-face {
+  font-family: 'FSMeP';
+  font-weight: 400;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../../fonts/fsmep/fsme.otf") format("opentype"); }
+@font-face {
+  font-family: 'FSMeP';
+  font-weight: 800;
+  font-style: normal;
+  font-display: fallback;
+  src: url("../../fonts/fsmep/fsme-bold.otf") format("opentype"); }
 body {
   width: 100%;
   height: 100vh;
@@ -113,19 +125,7 @@ span.smallSpace {
     background-position-x: 0; }
 
 .continueBtn {
-  display: none;
-  bottom: 18%;
-  position: absolute;
-  color: #726a7c;
-  background: white;
-  height: 50px;
-  padding: 0px 18px;
-  border-radius: 25px;
-  left: 50vw;
-  font-size: 16px;
-  font-weight: 600;
-  transform: translate(-50%, 50%);
-  z-index: 10; }
+  display: none; }
 
 .logged-in .announcementBanner span.button-text {
   border-bottom: 2px dotted rgba(255, 255, 255, 0.5);
@@ -366,8 +366,8 @@ span.smallSpace {
   background: #2d3949; }
 .announcementBanner.leftRight .bannerImage {
   position: absolute;
-  width: 100%;
-  right: 10px;
+  width: 500px;
+  right: 0px;
   top: 0px;
   height: 100%;
   background-image: url(../../images/instagram_banner_image2.png);
@@ -377,10 +377,12 @@ span.smallSpace {
   background-position-y: 50%; }
 .announcementBanner.leftRight .bannerGradient {
   position: absolute;
-  right: 171px;
+  right: 520px;
   top: 0;
   background: #e2e6ee;
-  background: linear-gradient(90deg, #e2e6ee 0%, #2d3949 35%, #2d3949 100%); }
+  background: linear-gradient(90deg, #e2e6ee 0px, #2d3948 100%);
+  width: 520px;
+  height: 100%; }
 .announcementBanner.leftRight .bannerRight {
   background: #e2e6ee; }
   .announcementBanner.leftRight .bannerRight:before {
@@ -410,8 +412,8 @@ span.smallSpace {
   line-height: 1.1em;
   font-weight: 400;
   letter-spacing: 0.01em;
-  max-width: 580px;
-  font-family: 'FS Me';
+  max-width: 600px;
+  font-family: 'FSMeP', 'Muli', 'Verdana', sans-serif;
   color: #465464; }
   .announcementBanner.leftRight .surOrSubTitle.small .button-text {
     display: inline-block;
@@ -428,15 +430,19 @@ span.smallSpace {
     .announcementBanner.leftRight .surOrSubTitle.small .button-text a {
       font-weight: 600; }
 
-.logged-in .announcementBanner.leftRight .bannerLeft {
-  width: calc(50% - 255px); }
-
 @media screen and (max-width: 1220px) {
   .announcementBanner.leftRight .titles {
     max-width: 710px; } }
-@media screen and (max-width: 1024px) {
-  .announcementBanner.leftRight .bannerImage {
-    background-size: 608px; } }
+@media screen and (max-width: 1480px) {
+  .announcementBanner.leftRight .bannerLeft {
+    width: calc(50% - 30px); }
+  .announcementBanner.leftRight .bannerRight {
+    width: calc(50% + 30px); }
+  .announcementBanner.leftRight .mainTitle {
+    padding: 0;
+    font-size: 2.5em; }
+  .announcementBanner.leftRight .surOrSubTitle {
+    font-size: 1.5em; } }
 @media screen and (max-width: 1023px) {
   .announcementBanner.leftRight .titles {
     max-width: 800px; }
@@ -463,6 +469,13 @@ span.smallSpace {
   .playPause {
     right: unset;
     left: 0; } }
+:root {
+  --bannerImageHeight: 130px;
+  --imageAdjust: var(--bannerImageHeight);
+  --bannerTopSpace: calc(54% - var(--imageAdjust));
+  --bannerSubSpace: 23%;
+  --bannerBottomSpace: 23%; }
+
 @media screen and (max-width: 767px), (orientation: portrait) {
   .shyBreak {
     display: block; }
@@ -471,46 +484,66 @@ span.smallSpace {
     width: 100vw;
     display: flex; }
 
+  .continueBtn-spacer {
+    width: 100%;
+    position: absolute;
+    height: var(--bannerBottomSpace);
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
   .announcementBanner {
     height: 100%;
     width: 100vw; }
-    .announcementBanner .mobile-banner-spacer {
+    .announcementBanner .mobile-banner-spacer,
+    .announcementBanner .mobile-banner-spacer-bottom {
       width: 100%; }
     .announcementBanner.leftRight .bannerLeft,
     .announcementBanner.leftRight .mobile-banner-spacer {
-      height: 170px; }
+      height: var(--bannerImageHeight); }
+    .announcementBanner.leftRight .bannerGradient {
+      display: none; }
+    .announcementBanner.leftRight .continueBtn-spacer,
+    .announcementBanner.leftRight .mobile-banner-spacer-bottom {
+      height: var(--bannerBottomSpace); }
     .announcementBanner.leftRight .bannerLeft {
       width: 100%;
       position: absolute;
       z-index: 1;
-      top: 45%;
-      transform: translate(-50%, -80px);
-      left: 50%; }
+      top: var(--bannerTopSpace);
+      justify-content: center; }
     .announcementBanner.leftRight .bannerImage {
+      height: var(--bannerImageHeight);
       position: relative;
       display: block;
       padding-right: 0;
-      background-position-x: 50%;
-      background-image: url(../../images/rt_quiz_banner_image4.png); }
+      background-size: 545px;
+      background-position-x: 50%; }
     .announcementBanner.leftRight .bannerRight {
       border: none;
       height: 100%; }
+      .announcementBanner.leftRight .bannerRight:before {
+        display: none; }
       .announcementBanner.leftRight .bannerRight .titlesAndButtons {
-        padding: 0 24px; }
-    .announcementBanner.leftRight .titles {
-      display: block; }
+        padding: 0 32px; }
     .announcementBanner.leftRight .mainTitle {
-      height: calc(40% - 60px);
+      font-size: 2.7em;
+      height: var(--bannerTopSpace);
       display: flex;
       flex-direction: column;
-      justify-content: center; }
+      justify-content: center;
+      max-width: 324px; }
     .announcementBanner.leftRight .surOrSubTitle {
-      flex: 1 1 34%;
+      font-size: 1.7em;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       max-width: 435px; }
     .announcementBanner .mainTitle {
       font-size: 95%; }
     .announcementBanner .surOrSubTitle {
-      height: calc(43% - 113px);
+      height: var(--bannerSubSpace);
       display: flex;
       flex-direction: column;
       justify-content: center; }
@@ -547,13 +580,19 @@ span.smallSpace {
     width: 100%; }
 
   .continueBtn {
-    display: inline-block; }
+    display: inline-block;
+    color: #ffffff;
+    background: #04b03e;
+    height: 40px;
+    padding: 0px 18px;
+    border-radius: 25px;
+    font-weight: 600;
+    z-index: 10; }
     .continueBtn p {
-      font-size: 18px;
+      font-size: 16px;
       margin: 0;
       padding: 0;
-      font-weight: 600;
-      letter-spacing: -0.02em; }
+      font-weight: 600; }
 
   .dotContainer {
     bottom: 70px;
@@ -594,15 +633,7 @@ span.smallSpace {
     font-size: 15px; } }
 @media screen and (min-height: 131px) {
   .announcementBanner {
-    height: 100%; }
-
-  .continueBtn {
-    font-size: 16px;
-    font-weight: 600;
-    bottom: 13%;
-    height: 36px;
-    display: flex;
-    align-items: center; } }
+    height: 100%; } }
 @media screen and (max-width: 420px) {
   .closeModal {
     width: 28px;
