--- a/styles/scss/banner-pl.scss
+++ b/styles/scss/banner-pl.scss
@@ -112,7 +112,7 @@ span {
     align-items: center;
     justify-content: flex-end;
     text-align: left;
-    background: #edf0f5;
+    background: #ebeef3;
     font-weight: 300;
     padding: 0;
     height: 100%;
