--- a/styles/scss/banner.scss
+++ b/styles/scss/banner.scss
@@ -77,7 +77,7 @@ span {
     }
 
     &.smallSpace {
-        letter-spacing: -0.1em;
+        letter-spacing: -0.15em;
     }
 }
 
@@ -535,10 +535,6 @@ span {
     .titles {
         box-sizing: border-box;
         line-height: 1.15em;
-
-        strong {
-            font-weight: 400;
-        }
     }
 
     .mainTitle {
@@ -556,7 +552,7 @@ span {
 .announcementBanner.leftRight {
     .bannerLeft {
         width: calc(50% - 191px);
-        background: #e3e0e8;
+        background: #c0b6c5;
     }
 
     .bannerImage {
@@ -565,11 +561,7 @@ span {
         right: 0;
         top: 0px;
         height: 100%;
-        background-image: url(../../images/rt_quiz_banner_image3b.png);
-        background-size: 613px;
-        background-repeat: no-repeat;
-        background-position-x: 100%;
-        background-position-y: 50%;
+        background: url(../../images/thirtieth10.png) 100% / auto 100% no-repeat;
     }
 
     .bannerRight {
@@ -583,7 +575,7 @@ span {
     .titlesAndButtons {
         height: 100%;
         text-align: left;
-        padding: 28px 28px 44px;
+        padding: 28px 28px 38px;
     }
 
     .titles {
@@ -597,7 +589,7 @@ span {
 
     .mainTitle {
         padding: 0;
-        font-size: 2.5em;
+        font-size: 2.8em;
         line-height: 1.1em;
         letter-spacing: -0.01em;
 
@@ -609,7 +601,7 @@ span {
 
     .surOrSubTitle {
         position: relative;
-        font-size: 1.75em;
+        font-size: 1.85em;
         line-height: 1.3em;
         font-weight: 400;
         letter-spacing: 0.03em;
@@ -664,14 +656,9 @@ span {
     }
 }
 
-@media screen and(max-width: 1024px) {
-    .announcementBanner.leftRight .bannerImage {
-        background-size: 608px;
-    }
-}
-
 @media screen and(max-width: 1023px) {
-    .announcementBanner.leftRight {
+    .announcementBanner.leftRight,
+    .logged-in .announcementBanner.leftRight {
         .titles {
             max-width: 800px;
         }
@@ -680,26 +667,12 @@ span {
             // font-size: 2em;
         }
 
-        .bannerImage {
-            display: none;
-        }
-
         .bannerRight {
-            width: 100vw;
-
-            .titlesAndButtons {
-                width: 100%;
-                text-align: center;
-                align-items: center;
-            }
-        }
-
-        .titles {
-            align-items: center;
+            width: calc(50% + 132px);
         }
 
         .bannerLeft {
-            width: 0;
+            width: calc(50% - 132px);
         }
 
         &.atvWelcome {
@@ -739,38 +712,38 @@ span {
     .bannerInnerBox {
         width: 100vw;
         display: flex;
+        background-color: #942d2d;
     }
 
     .announcementBanner {
-        height: 100%;
+        height: calc(100% - 13% - 18px);
         width: 100vw;
 
         .mobile-banner-spacer {
             width: 100%;
+            height: 180px;
         }
 
         &.leftRight {
             // LEFT
             .bannerLeft,
             .mobile-banner-spacer {
-                height: 170px;
+                height: 180px;
             }
 
             .bannerLeft {
                 width: 100%;
                 position: absolute;
                 z-index: 1;
-                top: 45%;
-                transform: translate(-50%, -80px);
-                left: 50%;
             }
 
             .bannerImage {
                 position: relative;
                 display: block;
                 padding-right: 0;
-                background-position-x: 50%;
-                background-image: url(../../images/rt_quiz_banner_image4.png);
+                background-position-x: center;
+                background-image: url(../../images/thirtieth_logo4.png);
+                background-size: auto 100%;
             }
 
             // RIGHT
@@ -788,14 +761,17 @@ span {
             }
 
             .mainTitle {
-                height: calc(40% - 60px);
+                height: calc(50% - 90px);
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+                text-align: center;
             }
 
             .surOrSubTitle {
-                flex: 1 1 34%;
+                height: calc(50% - 90px);
+                text-align: center;
+                max-width: initial;
             }
         }
 
@@ -937,13 +913,6 @@ span {
 }
 
 @media screen and (min-height: 131px) {
-    .announcementBanner {
-        height: 100%;
-
-        .bannerRight .titlesAndButtons {
-        }
-    }
-
     .continueBtn {
         font-size: 16px;
         font-weight: 600;
