--- a/styles/scss/banner.scss
+++ b/styles/scss/banner.scss
@@ -241,11 +241,11 @@ span {
         }
 
         .surOrSubTitle {
-            font-size: 70%;
-            margin-bottom: 8px;
+            font-size: 75%;
+            margin-bottom: 12px;
 
             &.small {
-                font-size: 65%;
+                font-size: 60%;
                 line-height: 1.25em;
                 margin-bottom: 0;
             }
@@ -321,7 +321,7 @@ span {
         }
 
         .titlesAndButtons {
-            padding: 12px 40px 12px 40px;
+            padding: 16px 40px 12px 40px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -740,8 +740,19 @@ span {
             }
         }
 
-        &.pprofilesBeta .titles {
-            max-width: 520px;
+        &.pprofilesBeta {
+            &.fullWidth .surOrSubTitle {
+                font-size: 70%;
+            }
+
+            .bannerRight {
+                background: url(../../images/pprofiles_beta_mobile.jpg) 50%/840px
+                    auto;
+            }
+
+            .titles {
+                max-width: 520px;
+            }
         }
 
         &.dandc {
@@ -763,7 +774,7 @@ span {
             height: 100%;
 
             .titlesAndButtons {
-                padding: 5px 24px 18%;
+                padding: 5px 24px 70px;
             }
         }
 
@@ -846,7 +857,7 @@ span {
         display: inline-block;
 
         p {
-            font-size: 18px;
+            font-size: 15px;
             margin: 0;
             padding: 0;
             font-weight: 600;
@@ -918,7 +929,7 @@ span {
     .continueBtn {
         font-size: 16px;
         font-weight: 600;
-        bottom: 22%;
+        bottom: 65px;
         height: 36px;
         display: flex;
         align-items: center;
